Update package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "zatus-core-js",
+  "name": "zatus-core",
   "version": "0.1.0",
   "description": "A util lib for JS",
   "author": "sartoz",
